<resources>
    <string name="app_name">FinPro 2</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="name">Name Item</string>
    <string name="id">ID Item</string>
    <string name="stok">Stock</string>
    <string name="harga">Prices</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="wanita">Wanita</string>
    <string name="pria">Pria</string>
    <string name="baju">Baju</string>
    <string name="formal">Formal</string>
    <string name="celana">Celana</string>
    <string name="sepatu">Sepatu</string>

    <string-array name="gender_array">
        <item>pria</item>
        <item>wanita</item>
        <item>unisex</item>
    </string-array>

    <string-array name="kategori_array">
        <item>clothes</item>
        <item>electronics</item>
        <item>books</item>
        <item>other</item>
    </string-array>

    <string-array name="filter_clothes_array">
        <item>baju</item>
        <item>formal</item>
        <item>celana</item>
        <item>sepatu</item>
    </string-array>

    <string-array name="filter_books_array">
        <item>books</item>
    </string-array>

    <string-array name="filter_electronics_array">
        <item>laptop</item>
        <item>handphone</item>
    </string-array>

    <string-array name="filter_other_array">
        <item>other</item>
    </string-array>
</resources>