<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/linear_product">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardRow"
        android:layout_width="146dp"
        android:layout_height="146dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/rowImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sepatu"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/rowName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:fontFamily="@font/poppinsmedium"
        android:maxWidth="146dp"
        android:text="@string/name"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cardRow"
        app:layout_constraintTop_toBottomOf="@+id/cardRow"/>

    <TextView
        android:id="@+id/rowStok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stok"
        android:fontFamily="@font/poppinsregular"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cardRow"
        app:layout_constraintTop_toBottomOf="@+id/rowName"/>

    <TextView
        android:id="@+id/rowHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harga"
        android:fontFamily="@font/poppinsbold"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        app:layout_constraintStart_toStartOf="@+id/rowStok"
        app:layout_constraintTop_toBottomOf="@+id/rowStok"/>

</androidx.constraintlayout.widget.ConstraintLayout>