<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddProduct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:src="@drawable/stock" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/orange"
            app:boxStrokeColor="@color/teal_200"
            app:boxBackgroundMode="outline">

            <EditText
                android:id="@+id/inputId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/id"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/orange"
            app:boxStrokeColor="@color/teal_200"
            app:boxBackgroundMode="outline">

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/orange"
            app:boxStrokeColor="@color/teal_200"
            app:boxBackgroundMode="outline">

            <EditText
                android:id="@+id/inputStok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/stok"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/orange"
            app:boxStrokeColor="@color/teal_200"
            app:boxBackgroundMode="outline">

            <EditText
                android:id="@+id/inputHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/harga"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/orange"
            app:boxStrokeColor="@color/teal_200"
            app:boxBackgroundMode="outline">

            <EditText
                android:id="@+id/inputDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/deskripsi"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/labelKategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Kategori"
            android:fontFamily="@font/poppinsbold"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/dropdownKategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:popupBackground="#EFEAE3"
            android:spinnerMode="dropdown"
            android:paddingStart="5dp"
            android:fontFamily="@font/poppinsregular"
            android:includeFontPadding="false"
            android:paddingVertical="16dp"/>

        <TextView
            android:id="@+id/labelFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Filter"
            android:fontFamily="@font/poppinsbold"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/dropdownFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppinsregular"
            android:includeFontPadding="false"
            android:popupBackground="#EFEAE3"
            android:paddingStart="5dp"
            android:paddingVertical="16dp" />

        <TextView
            android:id="@+id/labelGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Gender"
            android:fontFamily="@font/poppinsbold"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/dropdownGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppinsregular"
            android:includeFontPadding="false"
            android:popupBackground="#EFEAE3"
            android:paddingStart="5dp"
            android:paddingVertical="16dp" />

        <Button
            android:id="@+id/btnAddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:text="ADD ITEM" />
    </LinearLayout>

</ScrollView>